cabal-version:      3.0
name:               battleship-haskell
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options: -Wall

executable battleship-haskell
    import:           warnings
    main-is:          battleship.hs
    build-depends:    base ^>=4.17.2.1,
                      random >= 1.2
    default-language: Haskell2010
    other-modules:    Setup
                      GameLogic
                      Input
